--- a/templates/Bulletin-board-posting.html
+++ b/templates/Bulletin-board-posting.html
@@ -15,7 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&display=swap" rel="stylesheet">
 
-  <title>top</title>
+  <title>掲示板作成</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/Bulletin-board-posting.css') }}">
@@ -57,7 +57,7 @@
     </div>
 
     <div class="korami-naiyou">
-      <h3>コラム内容</h3>
+      <h3>内容</h3>
       <input type="text" class="C-input">
     </div>
 
