--- a/templates/column/column-post.html
+++ b/templates/column/column-post.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
 
-    <title>top</title>
+    <title>コラム投稿</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/column-post.css') }}">
