--- a/templates/shop/payment-completed.html
+++ b/templates/shop/payment-completed.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
 
-    <title>payment-completed</title>
+    <title>購入完了</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/payment-completed.css') }}">
